build: add building ccloud image into release pipeline